--- a/app/src/main/res/layout/fragment_set.xml
+++ b/app/src/main/res/layout/fragment_set.xml
@@ -11,13 +11,86 @@
         android:id="@+id/set_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:padding="10dp"
         android:text="@string/set"
         android:textSize="25sp"
+
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/divider_top"
         app:layout_constraintWidth_percent="0.5" />
+
+    <View
+        android:id="@+id/divider_top"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+
+        app:layout_constraintEnd_toEndOf="@id/recycler_view"
+        app:layout_constraintStart_toStartOf="@id/recycler_view"
+        app:layout_constraintTop_toBottomOf="@+id/set_header"
+        app:layout_constraintBottom_toTopOf="@+id/set_calories_header"
+
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp" />
+
+    <TextView
+        android:id="@+id/set_calories_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/calories_in_set"
+        android:textSize="14sp"
+
+        app:layout_constraintEnd_toStartOf="@+id/set_calories"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider_top"
+        app:layout_constraintBottom_toTopOf="@+id/divider_bottom"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <TextView
+        android:id="@+id/set_calories"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginEnd="5dp"
+        android:text="@string/set"
+        android:textSize="16sp"
+
+        app:layout_constraintEnd_toStartOf="@id/calories_type"
+        app:layout_constraintTop_toTopOf="@+id/set_calories_header"
+        app:layout_constraintBottom_toBottomOf="@+id/set_calories_header"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <TextView
+        android:id="@+id/calories_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/kcal"
+        android:textSize="16sp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/set_calories"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/set_header"
+        app:layout_constraintTop_toTopOf="@+id/set_calories"
+        app:layout_constraintWidth_percent="0.5" />
+
+    <View
+        android:id="@+id/divider_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+
+        app:layout_constraintEnd_toEndOf="@id/recycler_view"
+        app:layout_constraintStart_toStartOf="@id/recycler_view"
+        app:layout_constraintTop_toBottomOf="@+id/set_calories_header"
+        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
+
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -28,7 +101,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/set_header"
+        app:layout_constraintTop_toBottomOf="@id/set_calories"
 
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
